Increased input font size to 16px to prevent zoom on input focus on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ footer {
 input,
 button {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 16px;
 
   background-color: white;
   color: black;
